# haskell-hpx

./: .dockerignore  .gitignore  .gitmodules  .grab_hpx_1.0.sh  .grab_hpx_1.3.sh  .grab_hpx_2.2.sh  .grab_hpx_3.0.sh  .travis.yml  Dockerfile  Hpx.chs  LICENSE  Makefile  README.md  Test.hs  build_hpx_in_nix.sh  haskell-hpx.cabal  hpx-2.2.0.nix  run_tests.sh  shell.nix  stack.yaml
Foreign/: C2HS.hs  HPX.chs
cbits/: haskell_hpx.c  wr_hpx.c  wr_hpx_types.c
ffi_test/: Makefile  Safe.hs  test.c
include/: haskell_hpx.h  wr_hpx.h  wr_hpx_types.h
misc/: Static_HelloWorld.hs
mockups/: StaticTest2.hs  mockup.c
src/: APISketch.hs  StaticRep.hs
src/Foreign/: HPX.chs  HPX.hs  Utils.chs  Utils.hs
src/Foreign/HPX/: C.hs  Classes.hs  Types.hs
tests/: Fibonacci.hs  HelloWorld.hs  Main.hs  ParfibMockup.hs  Test.hs  Tests.hs
