name:                haskell-hpx
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/iu-parfunc/haskell-hpx
bug-reports:         https://github.com/iu-parfunc/haskell-hpx/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
copyright:           (C) 2014-2015 Ryan Newton
-- category:
stability:           Experimental
category:            Parallelism
build-type:          Simple
tested-with:         GHC == 7.10.2
extra-source-files:  CHANGELOG.md, README.md, cbits/*.c, include/*.h
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/iu-parfunc/haskell-hpx

library
  exposed-modules:     Foreign.HPX
                       Foreign.Utils
                       APISketch
                       StaticTest2
  build-depends:       base       >= 4.8 && < 4.9
                     , binary
                     , bytestring >= 0.9
                     , clock      >= 0.4.6.0
                     , containers >= 0.4 && < 0.6
  build-tools:         c2hs       >= 0.23.1
  default-language:    Haskell2010
  hs-source-dirs:      src
  pkgconfig-depends:   hpx >= 1.3.0
  ghc-options:         -Wall -g
  cc-options:          -Wall -g
  c-sources:           cbits/wr_hpx.c
  include-dirs:        include
  includes:            wr_hpx.h
  install-includes:    wr_hpx.h

test-suite test-hpx-init
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       HelloWorld, ParfibMockup, Fibonacci
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base  >= 4.8 && < 4.9
                     , bytestring >= 0.9
                     , haskell-hpx
                     , distributed-closure >= 0.1
  ghc-options:         -Wall -threaded
