name:                haskell-hpx
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/iu-parfunc/haskell-hpx
bug-reports:         https://github.com/iu-parfunc/haskell-hpx/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
copyright:           (C) 2014-2015 Ryan Newton
-- category:
stability:           Experimental
category:            Parallelism
build-type:          Simple
tested-with:         GHC == 7.10.3
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/iu-parfunc/haskell-hpx

library
  exposed-modules:     Foreign.HPX
                       Foreign.HPX.C
                       Foreign.HPX.Types
  build-depends:       base         >= 4.8 && < 4.9
                     , binary
                     , bytestring   >= 0.9
                     , bindings-hpx >= 0.1
                     , containers   >= 0.4 && < 0.6
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       HelloWorld
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base  >= 4.8 && < 4.9
                     , bytestring >= 0.9
                     , haskell-hpx
  ghc-options:         -Wall -threaded
